dependiendo deÃl zoom del navegador, el footer de newsletter deja un espacio en blanco

--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <main class="col-xl-12 p-5">
+    <main class="col-xl-12 p-5 mainNews">
         <div class="form-floating mb-3 col-xl-5 m-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="name">
             <label class="" for="floatingInput">Nombre completo</label>
@@ -78,7 +78,7 @@
 
     <div class="">
         <footer class="footer">
-            <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
+            <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center mt-5">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
                         <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt=""></a></li>
