--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
 
-    <header class="header__news">
+    <header class="header__news mt-5">
         <div class="newslet">
             <h2 class="m-4 p-4">Newsletter</h2>
         </div>
@@ -72,7 +72,7 @@
             <label for="floatingEmail">Email</label>
         </div>
         <div class="m-3 py-5">
-            <button type="button" class="btn btn-dark">SUSCRIBIRSE</button>
+            <button type="button" class="btn btn-dark mb-3">SUSCRIBIRSE</button>
         </div>
     </main>
 
