--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -71,14 +71,14 @@
             <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
             <label for="floatingEmail">Email</label>
         </div>
-        <div class="m-3 py-5">
-            <button type="button" class="btn btn-dark mb-3">SUSCRIBIRSE</button>
+        <div class= "mx-2 mb-5 py-5">
+            <button type="button" class="btn btn-dark mb-5">SUSCRIBIRSE</button>
         </div>
     </main>
 
     <div class="">
         <footer class="footer">
-            <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center mt-5">
+            <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 align-items-center mt-5">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
                         <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt=""></a></li>
