--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Galería de arte, obras de arte, visitanos en nuestras casas de Palermo y Belgrano">
     <title>Galeria Atlantida</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -24,9 +25,10 @@
 </head>
 
 <body class="">
+
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
+            <a class="navbar-brand" href="#">GA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -59,34 +61,34 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/galeriaCarrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeriaCarrusel.jpg" class="d-block w-100" alt="cuadros">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/galeriaCarrusel2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeriaCarrusel2.jpg" class="d-block w-100" alt="graffiti">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/galeriaCarrusel3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeriaCarrusel3.jpg" class="d-block w-100" alt="pintura al oleo">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/galeriaCarrusel4.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/galeriaCarrusel4.jpg" class="d-block w-100" alt="realismo">
                 </div>
             </div>
         </div>
     </header>
 
     <main class="main p-2">
-        <h2>Lorem</h2>
+        <h1>Galeria Atlantida</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque qui quidem ratione deserunt quod exercitationem accusamus quos aut, voluptas maxime.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illo doloribus eligendi sunt, tempora perspiciatis expedita pariatur. Doloribus molestiae, minus dolores voluptatibus dignissimos porro, dicta consequatur deserunt praesentium maxime quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque iure, quia, autem amet assumenda libero delectus laudantium saepe praesentium, voluptas odio nihil voluptates sed repellendus ad voluptate quasi tenetur corporis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio labore beatae et delectus vel repudiandae iste? Animi harum laudantium possimus error? Consequatur atque ipsum accusantium cum laborum blanditiis alias. Fugiat! Lorem, ipsum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi pariatur ea nihil, deleniti veniam non ad. Consequatur doloremque id, temporibus omnis quod fugit nostrum necessitatibus nobis quia vitae hic ad? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, quo dolores? Eum possimus quam ducimus nihil dolorum praesentium quia in error. Dolores debitis iusto quaerat magnam repellat! Doloribus, voluptatibus tempore! lorem</p>
     </main>
 
     <aside class="aside d-flex py-2">
         <div class="col-12 d-flex flex-wrap justify-content-center">
-            <img class="img1" src="assets/img/athens-art-school-1143741_640-min.jpg" alt="">
-            <img class="img1" src="assets/img/imgIndex3-min.jpg" alt="">
-            <img class="img1" src="assets/img/sailing-ship-659758_640-min.jpg" alt="">
-            <img class="img1" src="assets/img/gallery-3114279_640-min.jpg" alt="">
-            <img class="img1" src="assets/img/imgIndex-min.jpg" alt="">
-            <img class="img1" src="assets/img/imgIndex2-min.jpg" alt="">
+            <img class="img1" src="assets/img/athens-art-school-1143741_640-min.jpg" alt="renacimiento">
+            <img class="img1" src="assets/img/imgIndex3-min.jpg" alt="oleo cielo">
+            <img class="img1" src="assets/img/sailing-ship-659758_640-min.jpg" alt="barco navegando arte">
+            <img class="img1" src="assets/img/gallery-3114279_640-min.jpg" alt="galeria vitro arte">
+            <img class="img1" src="assets/img/imgIndex-min.jpg" alt="arte abstracto pintura">
+            <img class="img1" src="assets/img/imgIndex2-min.jpg" alt="arte minimalista obra">
         </div>
     </aside>
 
@@ -96,10 +98,10 @@
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-fb.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-ig.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-pint.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-tumblr.png" alt=""></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-fb.png" alt="logoFb"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-ig.png" alt="logoIg"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-pint.png" alt="logoPint"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-tumblr.png" alt="logoTumblr"></a></li>
                     </ul>
                 </nav>
             </div>
