--- a/pages/Exhibiciones.html
+++ b/pages/Exhibiciones.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Listado de nuestras exhibiciones actuales para que visistar">
     <title>Galeria Atlantida - Galeria de arte ubicada en Buenos Aires</title>
     
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -65,21 +66,21 @@
     <main class="">
         <div class="col-12 d-flex flex-wrap justify-content-around">
             <div>
-                <img class="imgExh" src="../assets/img/galeria-1.0-min.jpg" alt="">
+                <img class="imgExh" src="../assets/img/galeria-1.0-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Hola Crayola</h4>
                 <p>Por Malvabombom</p>
                 <p>Palermo - CABA</p>
             </div>
 
             <div>
-                <img class="imgExh" src="../assets/img/galeria-2-min.jpg" alt="">
+                <img class="imgExh" src="../assets/img/galeria-2-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Pinacoteca di Brera</h4>
                 <p>Por Asmongold</p>
                 <p>Palermo - CABA</p>
             </div>
 
             <div>
-                <img class="imgExh" src="../assets/img/galeria-3-min.jpg" alt="">
+                <img class="imgExh" src="../assets/img/galeria-3-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Minimalist</h4>
                 <p>Por Ibai</p>
                 <p>Belgrano - CABA</p>
@@ -89,7 +90,7 @@
             <h3 class="">Anteriores</h3>
             <hr>
             <div class="col-xl-4 justify-content-center">
-                <img class="imgExh1" src="../assets/img/galeria-4-min.jpg" alt="">
+                <img class="imgExh1" src="../assets/img/galeria-4-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Bajo el Cielo</h4>
                 <p>Por Richard Ollé</p>
                 <P>Palermo - CABA</P>
