--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ubicaciones e informacion de contacto de nuestas galerias">
     <title>Galeria Atlantida - Galeria de arte ubicada en Buenos Aires</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -67,7 +68,7 @@
 <main class="col- mx-4 main">
     <div class="d-flex flex-wrap justify-content-between mainDiv">
         <div class="col-5">
-            <img class="img-fluid" src="../assets/img/guggenheim-museum-2707258_640.jpg" alt="">
+            <img class="img-fluid" src="../assets/img/guggenheim-museum-2707258_640.jpg" alt="imagen galeria atlantida principal Palermo">
             <h4 class="">Galería Atlántida Palermo - Galería Principal</h4>
             <p class="">Libertad 1389, C1016 CABA</p>
             <p class="">Tel: 011 4811-3959</p>
@@ -76,7 +77,7 @@
         </div>
 
         <div class="col-5 ubi2">
-            <img class="img-fluid" src="../assets/img/bilbao-3724731_640.jpg" alt="">
+            <img class="img-fluid" src="../assets/img/bilbao-3724731_640.jpg" alt="imagen galeria atlantida belgrano">
             <h4 class="col-xl-4">Galería Atlántida Belgrano</h4>
             <p>Tucuman 712 casi esq. Maipu, CABA</p>
             <p>Tel: 011 4583-1369</p>
