--- a/pages/Artistas.html
+++ b/pages/Artistas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lista actual de artitas exhibidos en nuestra galerias">
     <title>Galeria Atlantida - Galeria de arte ubicada en Buenos Aires</title>
     
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -63,51 +64,51 @@
     <main class="">
         <div class="d-flex flex-wrap cards__art justify-content-center justify-content-around">
             <div class="card m-2">
-                <img src="../assets/img/arte-abstracto.jpg" alt="">
+                <img src="../assets/img/arte-abstracto.jpg" alt="arte abstracto por altair ahad">
                 <p>ALTAIR AHAD</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-cubismo-min.jpg" alt="">
+                <img src="../assets/img/arte-cubismo-min.jpg" alt="arte cubismo por pablo dali">
                 <p>PABLO DALÍ</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-doodle-min.jpg" alt="">
+                <img src="../assets/img/arte-doodle-min.jpg" alt="arte doodle por santiago di paolo">
                 <p>SANTIAGO DI PAOLO</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-expresionismo2.jpg" alt="">
+                <img src="../assets/img/arte-expresionismo2.jpg" alt="arte expresinismo por dalia zidane">
                 <p>DALIA ZIDANE</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-fotografia-min.jpg" alt="">
+                <img src="../assets/img/arte-fotografia-min.jpg" alt="arte fotografico por sonya">
                 <p>SONYA</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-impresionismo-min.jpg" alt="">
+                <img src="../assets/img/arte-impresionismo-min.jpg" alt="arte impresionismo por tibu zambrano">
                 <p>TIBÚ ZAMBRANO</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-nft-min.jpg" alt="">
+                <img src="../assets/img/arte-nft-min.jpg" alt="arte nft por greg aronov">
                 <p>GREG ARONOV</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-oleo-min.jpg" alt="">
+                <img src="../assets/img/arte-oleo-min.jpg" alt="arte oleo por alice kusama">
                 <p>ALICE KUSAMA</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-pop-min.jpg" alt="">
+                <img src="../assets/img/arte-pop-min.jpg" alt="arte pop por sergi">
                 <p>SERGI</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-realismo-min.jpg" alt="">
+                <img src="../assets/img/arte-realismo-min.jpg" alt="arte realismo por marcos bertrand">
                 <p>MARCOS BERTRAND </p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-surrealismo-min.jpg" alt="">
+                <img src="../assets/img/arte-surrealismo-min.jpg" alt="arte surrealismo por gabrielle scott">
                 <p>GABRIELLE SCOTT</p>
             </div>
             <div class="card m-2">
-                <img src="../assets/img/arte-abstracto2-min.jpg" alt="">
+                <img src="../assets/img/arte-abstracto2-min.jpg" alt="arte abstracto por nuria molina">
                 <p>NURIA MOLINA</p>
             </div>
         </div>
