--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Noticias personalizadas sobre la nuestras incorporaciones, agregados, etc">
     <title>Galeria Atlantida - Galeria de arte ubicada en Buenos Aires</title>
     
     <link rel="stylesheet" href="../assets/css/style.css">
