--- a/pages/Artistas.html
+++ b/pages/Artistas.html
@@ -63,51 +63,51 @@
 
     <main class="">
         <div class="d-flex flex-wrap cards__art justify-content-center justify-content-around">
-            <div class="card m-2">
+            <div class="card1 m-2">
                 <img src="../assets/img/arte-abstracto.jpg" alt="arte abstracto por altair ahad">
                 <p>ALTAIR AHAD</p>
             </div>
-            <div class="card m-2">
+            <div class="card2 m-2">
                 <img src="../assets/img/arte-cubismo-min.jpg" alt="arte cubismo por pablo dali">
                 <p>PABLO DALÍ</p>
             </div>
-            <div class="card m-2">
+            <div class="card3 m-2">
                 <img src="../assets/img/arte-doodle-min.jpg" alt="arte doodle por santiago di paolo">
                 <p>SANTIAGO DI PAOLO</p>
             </div>
-            <div class="card m-2">
+            <div class="card4 m-2">
                 <img src="../assets/img/arte-expresionismo2.jpg" alt="arte expresinismo por dalia zidane">
                 <p>DALIA ZIDANE</p>
             </div>
-            <div class="card m-2">
+            <div class="card5 m-2">
                 <img src="../assets/img/arte-fotografia-min.jpg" alt="arte fotografico por sonya">
                 <p>SONYA</p>
             </div>
-            <div class="card m-2">
+            <div class="card6 m-2">
                 <img src="../assets/img/arte-impresionismo-min.jpg" alt="arte impresionismo por tibu zambrano">
                 <p>TIBÚ ZAMBRANO</p>
             </div>
-            <div class="card m-2">
+            <div class="card7 m-2">
                 <img src="../assets/img/arte-nft-min.jpg" alt="arte nft por greg aronov">
                 <p>GREG ARONOV</p>
             </div>
-            <div class="card m-2">
+            <div class="card8 m-2">
                 <img src="../assets/img/arte-oleo-min.jpg" alt="arte oleo por alice kusama">
                 <p>ALICE KUSAMA</p>
             </div>
-            <div class="card m-2">
+            <div class="card9 m-2">
                 <img src="../assets/img/arte-pop-min.jpg" alt="arte pop por sergi">
                 <p>SERGI</p>
             </div>
-            <div class="card m-2">
+            <div class="card10 m-2">
                 <img src="../assets/img/arte-realismo-min.jpg" alt="arte realismo por marcos bertrand">
                 <p>MARCOS BERTRAND </p>
             </div>
-            <div class="card m-2">
+            <div class="card11 m-2">
                 <img src="../assets/img/arte-surrealismo-min.jpg" alt="arte surrealismo por gabrielle scott">
                 <p>GABRIELLE SCOTT</p>
             </div>
-            <div class="card m-2">
+            <div class="card12 m-2">
                 <img src="../assets/img/arte-abstracto2-min.jpg" alt="arte abstracto por nuria molina">
                 <p>NURIA MOLINA</p>
             </div>
