--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Galería de arte, obras de arte, visitanos en nuestras casas de Palermo y Belgrano">
+    <meta name="keywords" content="">
     <title>Galeria Atlantida</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -28,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">GA</a>
+            <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
