--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Galería de arte, obras de arte, visitanos en nuestras casas de Palermo y Belgrano">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="arte, cuadros, esculturas, artistas">
     <title>Galeria Atlantida</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -99,10 +99,10 @@
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-fb.png" alt="logoFb"></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-ig.png" alt="logoIg"></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-pint.png" alt="logoPint"></a></li>
-                        <li><a href=""><img class="img1"  src="./assets/img/logo-tumblr.png" alt="logoTumblr"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                        <li><a href=""><img class="img1"  src="./assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                     </ul>
                 </nav>
             </div>
