--- a/pages/Artistas.html
+++ b/pages/Artistas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lista actual de artitas exhibidos en nuestra galerias">
+    <meta name="keywords" content="arte, cuadros, esculturas, artistas">
     <title>Galeria Atlantida - Galeria de arte ubicada en Buenos Aires</title>
     
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -119,10 +120,10 @@
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt=""></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-tumblr.png" alt=""></a></li>
+                        <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                        <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                        <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                        <li><a href=""><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                     </ul>
                 </nav>
             </div>
