--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -66,28 +66,27 @@
     </div>
 </header>
 
-<main class="col- mx-4 main">
+    <main class="main">
+        <div class="d-flex justify-content-evenly cardsUbi">
+            <div class="col-5 m-2 cardUbi1">
+                <img class="img-fluid" src="../assets/img/galeria1-min.jpg" alt="imagen galeria atlantida principal Palermo">
+                <h4 class="col-xl-11 ">Galería Atlántida Palermo - Galería Principal</h4>
+                <p class="">Libertad 1389, C1016 CABA</p>
+                <p class="">Tel: 011 4811-3959</p>
+                <p class="">info@galeriaatlantida.com</p>
+                <p class="">Horarios: Lun-Vie 10-14h / 16h-20h </p>
+            </div>
 
-    <div class="d-flex flex-wrap justify-content-between cardsUbi">
-        <div class="col-5 cardUbi1">
-            <img class="img-fluid" src="../assets/img/guggenheim-museum-2707258_640.jpg" alt="imagen galeria atlantida principal Palermo">
-            <h4 class="col-xl-11 ">Galería Atlántida Palermo - Galería Principal</h4>
-            <p class="">Libertad 1389, C1016 CABA</p>
-            <p class="">Tel: 011 4811-3959</p>
-            <p class="">info@galeriaatlantida.com</p>
-            <p class="">Horarios: Lun-Vie 10-14h / 16h-20h </p>
+            <div class="col-5 m-2 cardUbi2">
+                <img class="img-fluid" src="../assets/img/galeria2-min.jpg" alt="imagen galeria atlantida belgrano">
+                <h4 class="col-xl-7">Galería Atlántida Belgrano</h4>
+                <p class="">Tucuman 712 casi esq. Maipu, CABA</p>
+                <p class="">Tel: 011 4583-1369</p>
+                <p class="">belgrano@galeriaatlantida.com</p>
+                <p class="">Horarios: Lun-Sab 10-14h / 16h-20h </p>
+            </div>
         </div>
-
-        <div class="col-5 cardUbi2">
-            <img class="img-fluid" src="../assets/img/bilbao-3724731_640.jpg" alt="imagen galeria atlantida belgrano">
-            <h4 class="col-xl-7">Galería Atlántida Belgrano</h4>
-            <p class="">Tucuman 712 casi esq. Maipu, CABA</p>
-            <p class="">Tel: 011 4583-1369</p>
-            <p class="">belgrano@galeriaatlantida.com</p>
-            <p class="">Horarios: Lun-Sab 10-14h / 16h-20h </p>
-        </div>
-    </div>
-</main>
+    </main>
 
 
     <footer class="footer">
