por fin arregle ese espacio en blanco del footer en newsletter y ubicaciones

--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -65,7 +65,7 @@
     </header>
 
     <main class="col-xl-12 p-5 mainNews">
-        <div class="form-floating mb-3 col-xl-5 m-3">
+        <div class="form-floating mb-5 col-xl-5 m-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="name">
             <label class="" for="floatingInput">Nombre completo</label>
         </div>
@@ -73,25 +73,24 @@
             <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
             <label for="floatingEmail">Email</label>
         </div>
-        <div class= "mx-2 mb-5 py-5">
+        <div class= "mx-2 py-5">
             <button type="button" class="btn btn-dark mb-5">SUSCRIBIRSE</button>
         </div>
     </main>
 
-    <div class="">
-        <footer class="footer">
-            <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 align-items-center mt-5">
-                <nav class="p-2">
-                    <ul class="d-flex justify-content-around">
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
-    </div>
+<footer class="footerNews">
+        <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 align-items-center">
+            <nav class="p-2">
+                <ul class="d-flex justify-content-around">
+                    <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                    <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                    <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                    <li><a href=""><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
+                </ul>
+            </nav>
+        </div>
+</footer>
+
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
