--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -89,7 +89,7 @@
     </main>
 
 
-    <footer class="footer">
+    <footer class="footerUbi">
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-around">
