--- a/pages/Artistas.html
+++ b/pages/Artistas.html
@@ -119,7 +119,7 @@
         <footer class="footer">
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
-                    <ul class="d-flex justify-content-around">
+                    <ul class="d-flex justify-content-evenly">
                         <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                         <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
                         <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
