--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -81,7 +81,7 @@
 <footer class="footerNews">
         <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 align-items-center">
             <nav class="p-2">
-                <ul class="d-flex justify-content-around">
+                <ul class="d-flex justify-content-evenly">
                     <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                     <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
                     <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
