Luchando con el footer de ubicaciones

--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -74,7 +74,7 @@
                 <p class="">Libertad 1389, C1016 CABA</p>
                 <p class="">Tel: 011 4811-3959</p>
                 <p class="">info@galeriaatlantida.com</p>
-                <p class="">Horarios: Lun-Vie 10-14h / 16h-20h </p>
+                <p class="mb-5">Horarios: Lun-Vie 10-14h / 16h-20h </p>
             </div>
 
             <div class="col-5 m-2 cardUbi2">
@@ -83,16 +83,16 @@
                 <p class="">Tucuman 712 casi esq. Maipu, CABA</p>
                 <p class="">Tel: 011 4583-1369</p>
                 <p class="">belgrano@galeriaatlantida.com</p>
-                <p class="">Horarios: Lun-Sab 10-14h / 16h-20h </p>
+                <p class="mb-5">Horarios: Lun-Sab 10-14h / 16h-20h </p>
             </div>
         </div>
     </main>
 
 
     <footer class="footerUbi">
-            <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 justify-content-around align-items-center">
+            <div class="col-12 col-md-12 col-xl-12 pt-1">
                 <nav class="p-2">
-                    <ul class="d-flex justify-content-around">
+                    <ul class="d-flex justify-content-evenly align-items-center">
                         <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                         <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
                         <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
