--- a/pages/Exhibiciones.html
+++ b/pages/Exhibiciones.html
@@ -104,10 +104,10 @@
             <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-evenly">
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
-                        <li><a href=""><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
+                        <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                        <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                        <li><a href="https://ar.pinterest.com/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                        <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                     </ul>
                 </nav>
             </div>
