retoque link de pinterest

--- a/pages/Exhibiciones.html
+++ b/pages/Exhibiciones.html
@@ -106,7 +106,7 @@
                     <ul class="d-flex justify-content-evenly">
                         <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                         <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                        <li><a href="https://ar.pinterest.com/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                        <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
                         <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                     </ul>
                 </nav>
