--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -64,19 +64,19 @@
         </div>
     </header>
 
-    <main class="col-xl-12 p-5 mainNews">
-        <div class="form-floating mb-5 col-xl-5 m-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="name">
-            <label class="" for="floatingInput">Nombre completo</label>
-        </div>
-        <div class="form-floating col-xl-5 m-3">
-            <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
-            <label for="floatingEmail">Email</label>
-        </div>
-        <div class= "mx-2 py-5">
-            <button type="button" class="btn btn-dark mb-5">SUSCRIBIRSE</button>
-        </div>
-    </main>
+        <main class="col-xl-12 p-5 mainNews">
+            <div class="form-floating mb-5 col-xl-5 m-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name">
+                <label class="" for="floatingInput">Nombre completo</label>
+            </div>
+            <div class="form-floating col-xl-5 m-3">
+                <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                <label for="floatingEmail">Email</label>
+            </div>
+            <div class= "mx-2 py-5">
+                <button type="button" class="btn btn-dark mb-5">SUSCRIBIRSE</button>
+            </div>
+        </main>
 
 <footer class="footerNews">
         <div class="container-fluid col-12 col-md-10 col-xl-12 pt-1 align-items-center">
@@ -84,7 +84,7 @@
                 <ul class="d-flex justify-content-evenly">
                     <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                     <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                    <li><a href="https://ar.pinterest.com/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                    <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
                     <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                 </ul>
             </nav>
