--- a/pages/Exhibiciones.html
+++ b/pages/Exhibiciones.html
@@ -67,21 +67,21 @@
     <main class="">
         <div class="col-12 d-flex flex-wrap justify-content-around">
             <div>
-                <img class="imgExh" src="../assets/img/galeria-1.0-min.jpg" alt="galeria de arte exhibicion">
+                <img class="img-fluid imgExh" src="../assets/img/galeria-1.0-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Hola Crayola</h4>
                 <p>Por Malvabombom</p>
                 <p>Palermo - CABA</p>
             </div>
 
             <div>
-                <img class="imgExh" src="../assets/img/galeria-2-min.jpg" alt="galeria de arte exhibicion">
+                <img class="img-fluid imgExh" src="../assets/img/galeria-2-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Pinacoteca di Brera</h4>
                 <p>Por Asmongold</p>
                 <p>Palermo - CABA</p>
             </div>
 
             <div>
-                <img class="imgExh" src="../assets/img/galeria-3-min.jpg" alt="galeria de arte exhibicion">
+                <img class="img-fluid imgExh" src="../assets/img/galeria-3-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Minimalist</h4>
                 <p>Por Ibai</p>
                 <p>Belgrano - CABA</p>
@@ -90,8 +90,8 @@
         <div class="mx-4 pt-4 ant">
             <h3 class="">Anteriores</h3>
             <hr>
-            <div class="col-xl-4 justify-content-center">
-                <img class="imgExh1" src="../assets/img/galeria-4-min.jpg" alt="galeria de arte exhibicion">
+            <div class="col-xl-4 justify-content-center mx-2">
+                <img class="img-fluid imgExh1" src="../assets/img/galeria-4-min.jpg" alt="galeria de arte exhibicion">
                 <h4 class="pt-3">Bajo el Cielo</h4>
                 <p>Por Richard Ollé</p>
                 <P>Palermo - CABA</P>
