--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -27,7 +27,7 @@
 </head>
 
 <body class="cont__news">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg" style="background-color: #CCCECC;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,8 +64,11 @@
         </div>
     </header>
 
-    <main class="col-xl-12 p-5 mainNews">
-        <div class="form-floating mb-5 col-xl-5 m-3">
+    <main class="col-xl-12 p-4 mainNews">
+        <div>
+            <img src="../assets/img/newsletter.jpg" alt="">
+        </div>
+        <div class="form-floating mb-4 col-xl-5 m-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="name">
             <label class="" for="floatingInput">Nombre completo</label>
         </div>
