--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg" style="background-color: #CCCECC;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
