--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -27,7 +27,7 @@
 </head>
 
 <body class="">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg" style="background-color: #CCCECC;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,9 +66,10 @@
     </div>
 </header>
 
-    <main class="main">
-        <div class="d-flex justify-content-evenly cardsUbi">
-            <div class="col-5 m-2 cardUbi1">
+    <main class="col-12">
+
+        <div class="d-flex justify-content-evenly cardsUbi mt-5">
+            <div class="col-5 cardUbi1">
                 <img class="img-fluid" src="../assets/img/galeria1-min.jpg" alt="imagen galeria atlantida principal Palermo">
                 <h4 class="col-xl-11 ">Galería Atlántida Palermo - Galería Principal</h4>
                 <p class="">Libertad 1389, C1016 CABA</p>
@@ -77,7 +78,7 @@
                 <p class="mb-5">Horarios: Lun-Vie 10-14h / 16h-20h </p>
             </div>
 
-            <div class="col-5 m-2 cardUbi2">
+            <div class="col-5 cardUbi2">
                 <img class="img-fluid" src="../assets/img/galeria2-min.jpg" alt="imagen galeria atlantida belgrano">
                 <h4 class="col-xl-7">Galería Atlántida Belgrano</h4>
                 <p class="">Tucuman 712 casi esq. Maipu, CABA</p>
@@ -86,20 +87,21 @@
                 <p class="mb-5">Horarios: Lun-Sab 10-14h / 16h-20h </p>
             </div>
         </div>
+
     </main>
 
 
     <footer class="footerUbi">
-            <div class="col-10 col-md-12 col-xl-12 pt-1">
-                <nav class="p-2">
-                    <ul class="d-flex justify-content-evenly align-items-center">
-                        <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
-                        <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                        <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
-                        <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
-                    </ul>
-                </nav>
-            </div>
+        <div class="col-12 col-md-12 col-xl-12 pt-1">
+            <nav class="p-2">
+                <ul class="d-flex justify-content-evenly align-items-center">
+                    <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                    <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                    <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                    <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="../assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
