--- a/pages/Newsletter.html
+++ b/pages/Newsletter.html
@@ -60,19 +60,19 @@
 
     <header class="header__news mt-5">
         <div class="newslet">
-            <h2 class="m-4 p-4">Newsletter</h2>
+            <h2 class="m-5">Newsletter</h2>
         </div>
     </header>
 
-    <main class="col-xl-12 p-4 mainNews">
+    <main class="col-xl-12 mainNews">
         <div>
             <img src="../assets/img/newsletter.jpg" alt="">
         </div>
-        <div class="form-floating mb-4 col-xl-5 m-3">
+        <div class="form-floating mb-4 col-md-5 col-lg-5 col-xl-5 m-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="name">
             <label class="" for="floatingInput">Nombre completo</label>
         </div>
-        <div class="form-floating col-xl-5 m-3">
+        <div class="form-floating col-md-5 col-lg-5 col-xl-5 m-3">
             <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
             <label for="floatingEmail">Email</label>
         </div>
