--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <header class="header">
+    <header class="header mt-3">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -78,18 +78,22 @@
     </header>
 
     <main class="main p-2">
-        <h1>Galeria Atlantida</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque qui quidem ratione deserunt quod exercitationem accusamus quos aut, voluptas maxime.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illo doloribus eligendi sunt, tempora perspiciatis expedita pariatur. Doloribus molestiae, minus dolores voluptatibus dignissimos porro, dicta consequatur deserunt praesentium maxime quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque iure, quia, autem amet assumenda libero delectus laudantium saepe praesentium, voluptas odio nihil voluptates sed repellendus ad voluptate quasi tenetur corporis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio labore beatae et delectus vel repudiandae iste? Animi harum laudantium possimus error? Consequatur atque ipsum accusantium cum laborum blanditiis alias. Fugiat! Lorem, ipsum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi pariatur ea nihil, deleniti veniam non ad. Consequatur doloremque id, temporibus omnis quod fugit nostrum necessitatibus nobis quia vitae hic ad? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, quo dolores? Eum possimus quam ducimus nihil dolorum praesentium quia in error. Dolores debitis iusto quaerat magnam repellat! Doloribus, voluptatibus tempore! lorem</p>
+        <h1 class="mx-1">Galería Atlántida</h1>
+        <p>Miguel Kehayoglu (1929-2009) fue un marchand argentino que supo entregarse con pasión a la difusión a nivel mundial de la obra de un grupo de talentosos artistas latinoamericanos. Descendiente de inmigrantes griegos,sus primeros acercamientos al mundo del arte se remontan a mediados del siglo XX cuando, ya consolidado como un destacado empresario textil, ideó un acercamiento entre la milenaria técnica helénica de fabricación de alfombras artesanales y la pintura latinoamericana, escribiendo seguramente el preludio de un fuerte compromiso con el arte que, años más tarde, en 1977, se terminaría de consolidar con la fundación de Galería Atlántida
+        Desde aquel momento, la galería, que abrió sus puertas en un petit hotel que fue completamente rediseñado bajo lineamientos de arquitectura vanguardista, se posicionó como un espacio de exposición y difusión de una colección enriquecida por la variedad de artistas emergentes y reconocidos de Latinoamérica. Convencido del valor del arte local, Kehayoglu se aventuró en un plan de expansión continental que lo llevó a abrir filiales de la galería en Estados Unidos.
+        Durante la última década, tomando el legado de su fundador, Galería Atlántida continuó expandiéndose, estableciendo una variada agenda de exposiciones, apoyando a jóvenes artistas, acrecentando su colección de serigrafías firmadas por grandes artistas contemporáneos.
+        Miguel Kehayoglu fue mucho más que un simple marchand, fue quien le otorgó carisma, pasión y compromiso a sus galerías.</p>
     </main>
 
     <aside class="aside d-flex py-2">
         <div class="col-12 d-flex flex-wrap justify-content-center">
-            <img class="img1" src="assets/img/athens-art-school-1143741_640-min.jpg" alt="renacimiento">
-            <img class="img1" src="assets/img/imgIndex3-min.jpg" alt="oleo cielo">
-            <img class="img1" src="assets/img/sailing-ship-659758_640-min.jpg" alt="barco navegando arte">
-            <img class="img1" src="assets/img/gallery-3114279_640-min.jpg" alt="galeria vitro arte">
+            <img class="img1" src="assets/img/pint2.jpg" alt="galeria vitro arte">
             <img class="img1" src="assets/img/imgIndex-min.jpg" alt="arte abstracto pintura">
             <img class="img1" src="assets/img/imgIndex2-min.jpg" alt="arte minimalista obra">
+            <img class="img1" src="assets/img/escultura.jpg" alt="renacimiento">
+            <img class="img1" src="assets/img/imgIndex3-min.jpg" alt="oleo cielo">
+            <img class="img1" src="assets/img/escultura2.jpg" alt="barco navegando arte">
+        
         </div>
     </aside>
 
