--- a/pages/Exhibiciones.html
+++ b/pages/Exhibiciones.html
@@ -26,7 +26,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body class="">
+<body class="bodyExh">
     <nav class="navbar navbar-expand-lg" style="background-color: #CCCECC;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GALERIA ATLANTIDA</a>
@@ -37,9 +37,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/Ubicaciones.html">UBICACIONES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/Exhibiciones.html">EXHIBICIONES</a>
