--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -63,35 +63,31 @@
     </div>
 </header>
 
-    <main class="col-12">
+<main class="col-xl-12 d-flex flex-wrap justify-content-around cardsLoc">
+    <div class="cardLocation">
+        <img class="img-fluid" src="../assets/img/map1.jpg" alt="">
+        <h4>Galería Atlántida Palermo</h4>
+        <p>Libertad 1389, C1016 CABA</p>
+        <p>Tel: 011 4811-3959</p>
+        <p>info@galeriaatlantida.com</p>
+        <p>Horarios: Lun-Vie 10h-14h / 16h-20h</p>
+    </div>
 
-        <div class="d-flex justify-content-evenly cardsUbi mt-5">
-            <div class="col-5 cardUbi1">
-                <img class="img-fluid" src="../assets/img/galeria1-min.jpg" alt="imagen galeria atlantida principal Palermo">
-                <h4 class="col-xl-11 ">Galería Atlántida Palermo - Galería Principal</h4>
-                <p class="">Libertad 1389, C1016 CABA</p>
-                <p class="">Tel: 011 4811-3959</p>
-                <p class="">info@galeriaatlantida.com</p>
-                <p class="mb-5">Horarios: Lun-Vie 10-14h / 16h-20h </p>
-            </div>
-
-            <div class="col-5 cardUbi2">
-                <img class="img-fluid" src="../assets/img/galeria2-min.jpg" alt="imagen galeria atlantida belgrano">
-                <h4 class="col-xl-7">Galería Atlántida Belgrano</h4>
-                <p class="">Tucuman 712 casi esq. Maipu, CABA</p>
-                <p class="">Tel: 011 4583-1369</p>
-                <p class="">belgrano@galeriaatlantida.com</p>
-                <p class="mb-5">Horarios: Lun-Sab 10-14h / 16h-20h </p>
-            </div>
-        </div>
-
-    </main>
+    <div class="cardLocation2">
+        <img class="img-fluid" src="../assets/img/map2.jpg" alt="">
+        <h4>Galería Atlántida Belgrano</h4>
+        <p>Tucuman 712 casi esq. Maipu, CABA</p>
+        <p>Tel: 011 4583-1369</p>
+        <p>belgrano@galeriaatlantida.com</p>
+        <p>Horarios: Lun-Sab 10h-14h / 16h-20h</p>
+    </div>
+</main>
 
 
     <footer class="footerUbi">
-        <div class="col-12 col-md-12 col-xl-12 pt-1">
+        <div class="container-fluid col-12 col-md-12 col-xl-12 pt-1 align-items-center">
             <nav class="p-2">
-                <ul class="d-flex justify-content-evenly align-items-center">
+                <ul class="d-flex justify-content-evenly">
                     <li><a href="https://es-la.facebook.com/"><img class="img1"  src="../assets/img/logo-fb.png" alt="logo Facebook"></a></li>
                     <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="../assets/img/logo-ig.png" alt="logo Instagram"></a></li>
                     <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="../assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
