--- a/pages/Ubicaciones.html
+++ b/pages/Ubicaciones.html
@@ -65,7 +65,7 @@
 
 <main class="col-xl-12 d-flex flex-wrap justify-content-around cardsLoc">
     <div class="cardLocation">
-        <img class="img-fluid" src="../assets/img/map1.jpg" alt="">
+        <img class="img-fluid" src="../assets/img/map1.jpg" alt="mapa galeria palermo">
         <h4>Galería Atlántida Palermo</h4>
         <p>Libertad 1389, C1016 CABA</p>
         <p>Tel: 011 4811-3959</p>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="cardLocation2">
-        <img class="img-fluid" src="../assets/img/map2.jpg" alt="">
+        <img class="img-fluid" src="../assets/img/map2.jpg" alt="mapa galeria belgrano">
         <h4>Galería Atlántida Belgrano</h4>
         <p>Tucuman 712 casi esq. Maipu, CABA</p>
         <p>Tel: 011 4583-1369</p>
