--- a/index.html
+++ b/index.html
@@ -84,26 +84,26 @@
 
     <aside class="aside d-flex py-2">
         <div class="col-12 d-flex flex-wrap justify-content-center">
-            <img class="img1" src="assets/img/pint2.jpg" alt="galeria vitro arte">
-            <img class="img1" src="assets/img/imgIndex-min.jpg" alt="arte abstracto pintura">
-            <img class="img1" src="assets/img/imgIndex2-min.jpg" alt="arte minimalista obra">
-            <img class="img1" src="assets/img/escultura.jpg" alt="renacimiento">
-            <img class="img1" src="assets/img/imgIndex3-min.jpg" alt="oleo cielo">
-            <img class="img1" src="assets/img/escultura2.jpg" alt="barco navegando arte">
-        
+            <img class="img1 img-fluid" src="assets/img/pint2.jpg" alt="galeria vitro arte">
+            <img class="img1 img-fluid" src="assets/img/imgIndex-min.jpg" alt="arte abstracto pintura">
+            <img class="img1 img-fluid" src="assets/img/imgIndex2-min.jpg" alt="arte minimalista obra">
+            <img class="img1 img-fluid" src="assets/img/escultura.jpg" alt="renacimiento">
+            <img class="img1 img-fluid" src="assets/img/imgIndex3-min.jpg" alt="oleo cielo">
+            <img class="img1 img-fluid" src="assets/img/escultura2.jpg" alt="barco navegando arte">
         </div>
     </aside>
 
 
     <div class="">
         <footer class="footer">
-            <div class="container-fluid col-10 col-md-10 col-xl-12 pt-1 align-items-center">
+
+            <div class="container-fluid col-10 col-md-10 col-xl-12 align-items-center">
                 <nav class="p-2">
                     <ul class="d-flex justify-content-evenly">
-                        <li><a href="https://es-la.facebook.com/"><img class="img1"  src="./assets/img/logo-fb.png" alt="logo Facebook"></a></li>
-                        <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img1"  src="./assets/img/logo-ig.png" alt="logo Instagram"></a></li>
-                        <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img1"  src="./assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
-                        <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img1"  src="./assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
+                        <li><a href="https://es-la.facebook.com/"><img class="img2"  src="./assets/img/logo-fb.png" alt="logo Facebook"></a></li>
+                        <li><a href="https://www.instagram.com/explore/tags/artgallery/?hl=es-la"><img class="img2"  src="./assets/img/logo-ig.png" alt="logo Instagram"></a></li>
+                        <li><a href="https://ar.pinterest.com/galeriadearte08/galerias-de-arte/"><img class="img2"  src="./assets/img/logo-pint.png" alt="logo Pinterest"></a></li>
+                        <li><a href="https://www.tumblr.com/search/art%20gallery"><img class="img2"  src="./assets/img/logo-tumblr.png" alt="logo Tumblr"></a></li>
                     </ul>
                 </nav>
             </div>
